Fixed notification overflow, overlapping of props

--- a/src/components/Dashboard/NotificationsSection.css
+++ b/src/components/Dashboard/NotificationsSection.css
@@ -1,13 +1,13 @@
 .main_section {
   /* the below settings ensure the page fits on the RHS of the sidebar */
-  left: 250px;
-  top: 0px;
   position: relative;
-  width: (100% - 250px);
-  color: #fff;
-  justify-content: center;
-  /* display: flex; */
-  padding: 5%;
+  top: 0px;
+  left: 250px;
+  height: 100vh;
+  width: calc(100% - 250px);
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-top: 2%;
 }
 
 .main_section h1 {
@@ -22,13 +22,17 @@
   outline-color: #3e74ff;
   height: 300px;
   width: 90%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+  list-style: none;
+  flex-direction: column;
+  display: flex;
 }
 
 .notif {
-  height: 20px;
   width: 100%;
   outline: 2px;
+  margin-left: 5px;
   outline-style: solid;
   outline-color: #3e74ff;
 }
